# pepsi_assert-2.0

./: .flaskenv  .gitignore  README.md  assert.db  assert.session.sql  pepsi_yc  private_my.xlsx  pyproject.toml  table.sql
assert/: __init__.py  app.py  employee.py  extensions.py  forms.py  models.py  settings.py  table.sql
assert/admin/: __init__.py  view.py
assert/blueprints/: admin.py  ledger.py  user.py
assert/download/: public_now.xlsx
assert/ledger/: __init__.py  view.py
assert/templates/: admin_employers.html  admin_personal.html  admin_private.html  admin_public.html  admin_update_personal_asserts.html  admin_update_public_asserts.html  base.html  login.html  personal0.xlsx  personal_assert.html  private0.xlsx  private_assert.html  profile.html  public0.xlsx  public_assert.html  signup.html  update_password.html  whole.xlsx
assert/user/: __init__.py  view.py
auth/: __init__.py
database/: __init__.py  sqlite_async.py
