[tool.poetry]
name = "assert"
version = "0.1.0"
description = ""
authors = ["meiyujack <meiyujack@msn.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apiflask = "^1.3.0"
aiosqlite = "^0.18.0"
asgiref = "^3.6.0"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
pyyaml = "^6.0"
pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init_db="assert:init_db"
init_data="assert:init_data"
run="assert:run"