[tool.poetry]
name = "assert"
version = "0.1.0"
description = ""
authors = ["meiyujack <meiyujack@msn.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apiflask = "^2.1.0"
aiosqlite = "^0.18.0"
asgiref = "^3.6.0"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
pyyaml = "^6.0"
pillow = "^9.5.0"
flask-login = "^0.6.3"
flask-wtf = "^1.1.1"
flask-sqlalchemy = {extras = ["asyncio"], version = "^3.1.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init_db="assert:init_db"
init_data="assert:init_data"
run="assert:run"